# mco_sorteador

./: README.md  pyproject.toml  requirements.txt
src/: main.py
